sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:17: error: not found: value i
      if(plusPetit(i+1,i)){
                   ^AlgCocktailSort2:17: error: not found: value i
      if(plusPetit(i+1,i)){
                       ^AlgCocktailSort2:18: error: not found: value i
        echange(i,i+1)
                ^AlgCocktailSort2:18: error: not found: value i
        echange(i,i+1)
                  ^